--- a/ebook/zh/01.01.md
+++ b/ebook/zh/01.01.md
@@ -82,3 +82,20 @@ void LeftRotateString(char* s,int n,int m)
 例如，原字符串为”Ilovebaofeng”，m=7，输出结果为：”baofengIlove”。
 
 3、单词翻转。输入一个英文句子，翻转句子中单词的顺序，但单词内字符的顺序不变，句子中单词以空格符隔开。为简单起见，标点符号和普通字母一样处理。例如，输入“I am a student.”，则输出“student. a am I”。
+
+
+
+/*给定一个字符串，要求把字符串前面的若干个字符移动到字符串的尾部，
+如把字符串“abcdef”前面的2个字符'a'和'b'移动到字符串的尾部，
+使得原字符串变成字符串“cdefab”。请写一个函数完成此功能，
+要求对长度为n的字符串操作的时间复杂度为 O(n)，空间复杂度为 O(1)。*/
+
+def reverse(s: String, num: Int): String = {
+  var sub = s.substring(num)
+  for(i <- 0 until num){
+    sub += s(i)
+  }
+  sub
+}
+reverse("abcdef", 2)
+
