--- a/ebook/zh/01.01.md
+++ b/ebook/zh/01.01.md
@@ -89,7 +89,7 @@ void LeftRotateString(char* s,int n,int m)
 如把字符串“abcdef”前面的2个字符'a'和'b'移动到字符串的尾部，
 使得原字符串变成字符串“cdefab”。请写一个函数完成此功能，
 要求对长度为n的字符串操作的时间复杂度为 O(n)，空间复杂度为 O(1)。*/
-
+```java
 def reverse(s: String, num: Int): String = {
   var sub = s.substring(num)
   for(i <- 0 until num){
@@ -98,4 +98,4 @@ def reverse(s: String, num: Int): String = {
   sub
 }
 reverse("abcdef", 2)
-
+```
